# elena

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  cli-entry-point.py  dot_env_sample.txt  elena.sh  elena_v1.py  install-cron.sh  install.sh  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: makefile.yml
cfg/: dependency_injection.py  dev-default.yaml  prod-default.yaml  test-default.yaml
elena/: __init__.py  binance.py  constants.py  data_recorder.py  elena_bot.py  exchange.py  exchange_manager.py  logging.py  record.py  test_data_recorder.py  test_data_recording.py  test_utils.py  utils.py
elena/cfg/: dependency_injection.py  dev-default.yaml  test-default.yaml
elena/config/: default_config.yaml  dependency_injection.py
elena/ports/: exchange.py
elena/sample/: elena_config.yaml  trailing_stop.py
elena/shared/: dynamic_loading.py
elena/test_strategy/: exchange_basic_operation_test.py
sample_bot/: ETHBUSD_2022-01-20_321.json
sample_bots/: AVAXBTC_2022-02-26_632.json  ETHBUSD_2022-01-20_321.json  LUNABTC_2022-01-23_mirror_166.json  LUNABTC_2022-01-23_mirror_32.json  LUNABUSD_2022-02-26_945.json
test/elena/: config.yaml  elena_config_sample.yaml  how_to_test.md  test_data_recorder.py  test_exchange.py  test_exchange_manager.py  test_utils.py
test/test_data/: 1644868841483-get_klines.json  1644868841486-get_candles.json  1645107155828-1645107156451-get_klines.json  1645107155828-1645107156453-get_candles.json  elena_config_sample.yaml  (+1 more)
test_data/: Exchange-1643865524441.json.data
(+138 files in other folders)
