[metadata]
name = elena
version = 2.1.1
author = "L Software Foundation"
author_email = "fransimo@gmail.com, pjover@gmail.com"
description = Hexagonal multi exchange crypto currency strategy executor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cyrpto, trade, bot
license = MIT
url = https://github.com/Pasta-fantasia/elena
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Topic :: Other/Nonlisted Topic
    Programming Language :: Python :: 3

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
# https://github.com/pypa/setuptools/issues/1951
# install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    elena = elena.entrypoint.local.entrypoint:main

[options.package_data]
* = *.sql, *.csv, *.yaml, *.yml